# fante-game-orchestrator

./: .gitignore  Makefile  SUMMARY.md  pyproject.toml  pytest.ini
data/: player_profile.json
docs/: project_briefing.md
prompts/: classifier.yaml  evaluator.yaml  narrator.yaml
src/fante/: __main__.py  compose.py  config.py  main.py  manager.py
src/fante/adapters/: __init__.py  bridge_narrator.py  json_profile_store.py  json_session_store.py  llm_evaluator.py  local_dice.py  mcp_rules.py  noop_knowledge.py  stdio_io.py
src/fante/cli/: __init__.py  commands.py
src/fante/domain/: __init__.py  actor.py  events.py  profile.py  rules.py  session.py  turn.py
src/fante/events/: __init__.py  bus.py  dad_monitor.py  subscribers.py
src/fante/ports/: __init__.py  evaluator.py  io.py  knowledge.py  narrator.py  rules.py  session.py  stores.py
src/fante/turn/: __init__.py  classifier.py
tests/: conftest.py  test_actor_translation.py  test_classifier.py  test_commands.py  test_dad_monitor.py  test_dice.py  test_evaluator.py  test_event_bus.py  test_integration.py  test_manager.py  test_mcp_rules.py  test_narrator.py  test_profile.py  test_session_store.py  test_turn_flow.py
