[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "fante-game-orchestrator"
version = "0.1.5"
description = "Game loop orchestrator for a voice/text RPG"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "core-utils @ git+https://github.com/fermaat/core-utils.git",
    "core-llm-bridge @ git+https://github.com/fermaat/core-llm-bridge.git",
    "pyyaml>=6.0.3",
]
authors = [
    {name = "Fernando Velasco", email = "fermaat.vl@gmail.com"},
]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "isort>=5.12",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "types-PyYAML>=6.0",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/fante"]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "isort>=5.12",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "types-PyYAML>=6.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Tests intentionally use untyped fixtures (Callable[..., tuple[...]] returned
# by builder fixtures) — exercising end-to-end behaviour matters more than
# tight signatures here.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# External libraries without py.typed marker / type stubs.
[[tool.mypy.overrides]]
module = [
    "core_llm_bridge.*",
    "core_utils.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
ignore = [
    "E501",
    "E203",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
